Command to run program added in README